# tidb

./: DEPS.bzl  go.mod  go.sum  test.md
br/pkg/backup/: client.go  schema.go
br/pkg/conn/: conn.go
br/pkg/lightning/: lightning.go
br/pkg/restore/: client.go  import.go  pipeline_items.go  split_client.go
br/pkg/storage/: s3.go
br/pkg/task/: common.go
br/pkg/utils/: math.go  worker.go
config/: config.go
ddl/: BUILD.bazel  backfilling.go  column.go  column_test.go  ddl.go  ddl_api.go  ddl_worker.go  delete_range.go  disttask_flow.go  foreign_key.go  index.go  index_lightning.go  partition.go  reorg.go
ddl/addindex/: cache.go  check.go  check_test.go  common.go  engine.go  index.go  kvbuf.go  metrics.go
ddl/ingest/: backend_mgr.go  config.go
ddl/lightning/: backend.go  common.go  common_test.go  context.go  engine.go  engine_mgr.go  env.go  env_test.go  kv.go  lightning_error.go  mem_mgr.go  metrics.go  res_mgr.go
disttask/globaldataservice/: BUILD.bazel  redistribute.go  redistribute_test.go
errno/: errname.go
executor/: builder.go  executor.go  show.go  show_test.go
metrics/: telemetry.go
parser/: parser.y
parser/ast/: dml.go  misc.go
parser/model/: model.go
parser/terror/: terror.go
pkg/executor/: builder.go  infoschema_reader.go
planner/core/: common_plans.go  logical_plans.go  planbuilder.go  preprocess.go
sessionctx/variable/: session.go  sysvar.go  sysvar_test.go  tidb_vars.go  variable.go
table/: index.go
table/tables/: index.go
telemetry/: data_feature_usage.go  data_feature_usage_test.go
tidb-server/: main.go
(+36 files in other folders)
